--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
             rel="stylesheet"
         />
         <meta name="description" content="Web site created using create-react-app" />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Task Four</title>
     </head>
     <body>
