--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Task Four</title>
-        <script type="text/javascript">
+        <script>
             var pathSegmentsToKeep = 0;
 
             var l = window.location;
