--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         />
         <meta name="description" content="Web site created using create-react-app" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <script type="text/javascript">
+        <script>
             (function (l) {
                 if (l.search[1] === "/") {
                     var decoded = l.search
